src/test/compile-fail/issue-2370.rs
// error-pattern: can only dereference structs
struct cat {
    foo: ()
}

fn main() {
    let nyan = cat { foo: () };
    log (error, *nyan);
}
